Wording on Quota admin screen - periods

--- a/app/views/quota_results.html
+++ b/app/views/quota_results.html
@@ -221,7 +221,7 @@
                                     {% if qd.quota_periods | length == 0 %}
                                         <p>There are currently no suspension or blocking periods to display.</p>
                                     {% else %}
-                                        <p>The table below lists events of type critical, exhaustion, unblocking, unsuspension and re-opening.</p>
+                                        <p>The table below lists quota blocking and suspension periods.</p>
                                         <table class="govuk-table govuk-table--m">
                                             {# <caption class="govuk-table__caption govuk-table__caption--m">Additional events</caption> #}
                                             <thead class="govuk-table__head">
